# juspay-mcp

./: .clinerules  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.dashboard-sse  Dockerfile.sse  LICENSE  README.md  activeContext.md  flake.nix  main.py  productContext.md  progress.md  projectbrief.md  pyproject.toml  schema.py  setup.py  stdio.py  systemPatterns.md  techContext.md  tools.py
.github/workflows/: ci.yaml  docker-release.yml
.github/workflows/scripts/: ci-helpers.sh
api/: order_status.py
juspay_dashboard_mcp/: config.py  response_schema.py  tools.py  utils.py
juspay_dashboard_mcp/api/: __init__.py  alert.py  feature.py  gateway.py  offer.py  orders.py  payments.py  q_api.py  qapi.py  rag_tool.py  report.py  settings.py  surcharge.py  user.py  utils.py
juspay_dashboard_mcp/api_schema/: alert.py  feature.py  gateway.py  headers.py  offer.py  orders.py  payments.py  q_api.py  rag_tool.py  report.py  settings.py  surcharge.py  user.py
juspay_mcp/: __init__.py  config.py  main.py  response_schema.py  schema.py  tools.py  utils.py
juspay_mcp/api/: card.py  customer.py  offer.py  order.py  refund.py  session.py  txn.py  upi.py  utils.py  wallet.py
juspay_mcp/api_schema/: card.py  customer.py  offer.py  order.py  refund.py  routing.py  session.py  txn.py  upi.py  wallet.py
juspay_tools/: __main__.py  config.py  main.py  response_schema.py  schema.py  stdio.py  tools.py
juspay_tools/api/: card.py  customer.py  offer.py  order.py  order_status.py  refund.py  session.py  upi.py  utils.py
nix/: container.nix  docker.nix  pre-commit.nix  python.nix
