[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "juspay-mcp"
version = "0.1.0"
description = "Tools for Juspay"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
]

[tool.setuptools]
packages = ["juspay_mcp", "juspay_mcp.api"] 

[project.scripts]
juspay-mcp = "main:main"